--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "jsonp": "^0.2.1",
     "swiper": "^4.5.0",
     "vue": "^2.6.10",
+    "vue-awesome-swiper": "^3.1.3",
     "vue-router": "^3.0.3",
     "vuex": "^3.0.1"
   },
@@ -27,6 +28,7 @@
     "eslint-plugin-vue": "^5.0.0",
     "node-sass": "^4.9.0",
     "sass-loader": "^7.1.0",
+    "vue-lazyload": "^1.2.6",
     "vue-template-compiler": "^2.5.21"
   },
   "eslintConfig": {
